# financial_reflexivity

prevailing-bias/: README.md  pyproject.toml
prevailing-bias/src/prevailing_bias/: __init__.py  config.py
prevailing-bias/src/prevailing_bias/data_loading/: market_data.py
prevailing-bias/src/prevailing_bias/model/: fragility.py  prevailing_bias_model.py
prevailing-bias/src/prevailing_bias/options/: options_features.py
prevailing-bias/src/prevailing_bias/prediction_markets/: __init__.py  polymarket.py
prevailing-bias/src/prevailing_bias/price/: price_features.py
prevailing-bias/src/prevailing_bias/sentiment/: aggregation.py  features.py
prevailing-bias/src/prevailing_bias/sentiment/engines/: base.py  finbert_engine.py
prevailing-bias/src/prevailing_bias/sentiment/providers/: base.py  eodhd_news.py  social_api.py
prevailing-bias/src/prevailing_bias/visualization/: bias_dashboard.py
